test_regress/t/t_implements_nested_bad.out
%Error: t/t_implements_nested_bad.v:9:17: Interface class shall not be nested within another interface class. (IEEE 1800-2023 8.26)
    9 |       interface class bad_cannot_nest;
      |                 ^~~~~
%Error: Exiting due to
